output a labeled tree string

--- a/src/makefile
+++ b/src/makefile
@@ -4,13 +4,17 @@
 #------------------------------------------------
 
 # change the following two lines according to your system
-BOOST_DIRECTORY=/Users/amcpherson/Build/boost_1_51_0
-CPLEX_DIRECTORY=/Users/amcpherson/Applications/IBM/ILOG/CPLEX_Studio125
+BOOST_DIRECTORY=/Users/amcphers/Build/boost_1_51_0
+CPLEX_DIRECTORY=/Users/amcphers/Applications/IBM/ILOG/CPLEX_Studio125
 CPLEX_BUILD=x86-64_darwin
 
 CC=g++-mp-4.8
 
 citupqip: citupqip.cpp
 	$(CC) -ggdb citupqip.cpp -o citupqip -O3 -DIL_STD -DILOSTRICTPOD -I../External/ -I$(CPLEX_DIRECTORY)/concert/include -I$(CPLEX_DIRECTORY)/cplex/include -L$(CPLEX_DIRECTORY)/concert/lib/$(CPLEX_BUILD)/static_pic/ -lconcert -L$(CPLEX_DIRECTORY)/cplex/lib/$(CPLEX_BUILD)/static_pic -l ilocplex -l cplex -l m -l pthread
+
+
+citupiter: citupiter.cpp
+	$(CC) -ggdb citupiter.cpp -o citupiter -O3 -DIL_STD -DILOSTRICTPOD -I../External/ -I$(CPLEX_DIRECTORY)/concert/include -I$(CPLEX_DIRECTORY)/cplex/include -L$(CPLEX_DIRECTORY)/concert/lib/$(CPLEX_BUILD)/static_pic/ -lconcert -L$(CPLEX_DIRECTORY)/cplex/lib/$(CPLEX_BUILD)/static_pic -l ilocplex -l cplex -l m -l pthread
 
 	
