--- a/conda/citup/meta.yaml
+++ b/conda/citup/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: '0.1.0'
 
 source:
-  git_url: https://dranew@bitbucket.org/dranew/destruct.git
+  git_url: https://dranew@bitbucket.org/dranew/citup.git
   git_rev: v0.1.0
 
 build:
